Updated some displays

--- a/src/assets/locales/es/translation.json
+++ b/src/assets/locales/es/translation.json
@@ -42,7 +42,7 @@
     "details": "Detalles",
     "morning": "Mañana",
     "day": "Día",
-    "evening": "Noche",
+    "evening": "Tarde",
     "night": "Noche"
   }
 }
